# promptline

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/concepts/: core.md  gate.md  judge.md  optimizers.md  serving.md
docs/superpowers/plans/: 2026-07-03-promptline-implementation.md
docs/superpowers/specs/: 2026-07-03-promptline-design.md
examples/support-assistant/: README.md
examples/support-assistant/fixtures/: gold_fixture.jsonl  support_fixture.jsonl
promptline/cli/: demo.py  main.py
promptline/core/: cache.py  config.py  llm.py  openrouter.py  program.py  types.py
promptline/data/: dataset.py  loaders.py
promptline/eval/: harness.py  stats.py
promptline/judge/: __init__.py  calibrator.py  judge.py  metric_factory.py  metrics.py
promptline/optimizers/: base.py  bootstrap.py  mipro.py  opro.py  protegi.py
promptline/optimizers/gepa/: __init__.py  engine.py  merge.py  pareto.py  reflect.py  state.py
promptline/registry/: gate.py  registry.py
promptline/server/: app.py  runs.py
promptline/tui/: app.py  events.py
tests/: test_import.py
tests/cli/: test_cli.py  test_demo.py
tests/core/: test_cache.py  test_llm.py  test_openrouter.py  test_program.py  test_types.py
tests/data/: test_dataset.py  test_loaders.py
tests/e2e/: conftest.py  serve_fixture.py  test_cli_e2e.py  test_failure_paths.py  test_full_pipeline_offline.py
tests/eval/: test_harness.py  test_stats.py
tests/integration/: test_live_smoke.py
tests/judge/: test_calibrator.py  test_judge.py  test_metric_factory.py  test_metrics.py
tests/optimizers/: test_base.py  test_bootstrap.py  test_event_payloads.py  test_mipro.py  test_opro.py  test_protegi.py
tests/optimizers/gepa/: test_engine.py  test_pareto.py  test_reflect_merge.py
tests/registry/: test_gate.py  test_registry.py
tests/server/: test_api.py
tests/tui/: test_tui.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
web/e2e/: dashboard.spec.ts
web/src/: Layout.tsx  api.ts  main.tsx  theme.css
web/src/__tests__/: DiffView.test.tsx  JudgePage.test.tsx  NotFound.test.tsx  lineage.test.ts  runReducer.test.ts  sanitizeRunEvent.test.ts
web/src/components/: DiffView.tsx  Panel.tsx  ScoreCurve.tsx
web/src/pages/: GatePage.tsx  JudgePage.tsx  LineagePage.tsx  NotFound.tsx  RegistryPage.tsx  RunDetail.tsx  RunsPage.tsx
web/src/state/: lineage.ts  runReducer.ts
