[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx",
  "pydantic>=2",
  "typer",
  "rich",
  "textual",
  "fastapi",
  "sse-starlette",
  "uvicorn",
  "optuna",
  "numpy",
  "scipy",
  "pyyaml",
]

[project.optional-dependencies]
data = ["datasets"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "pyright",
  "respx",
]

[tool.pyright]
include = ["promptline"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: hits real OpenRouter models; skipped unless OPENROUTER_API_KEY is set",
]

[project.scripts]
promptline = "promptline.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["promptline"]
