[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptline-opt"
version = "0.1.1"
description = "Calibrate -> Optimize -> Gate -> Serve: automatic prompt optimization with a calibrated LLM judge, statistical deploy gating, and a versioned serving registry."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sanskar Pandey" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
  "httpx",
  "pydantic>=2",
  "typer",
  "rich",
  "textual",
  "fastapi",
  "sse-starlette",
  "uvicorn",
  "optuna",
  "numpy",
  "scipy",
  "pyyaml",
]

[project.urls]
Homepage = "https://github.com/sanskarpan/promptline"
Repository = "https://github.com/sanskarpan/promptline"

[project.optional-dependencies]
data = ["datasets"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "pyright",
  "respx",
]

[tool.pyright]
include = ["promptline"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: hits real OpenRouter models; skipped unless OPENROUTER_API_KEY is set",
]

[project.scripts]
promptline = "promptline.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["promptline"]
